Correction mobile

--- a/public/assets/css/projets.css
+++ b/public/assets/css/projets.css
@@ -65,7 +65,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    padding: .2rem 1rem;
+    padding: .2rem .8rem;
     margin: 0;
     background: linear-gradient(to top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3));
     color: var(--text-white);
@@ -79,7 +79,7 @@
 
 /* Contenu de la cellule */
 .card .cell__content {
-    padding: .5rem 1.5rem;
+    padding: .5rem .8rem;
     flex: 1;
     display: flex;
     flex-direction: column;
